--- a/blocks/stories/stories.css
+++ b/blocks/stories/stories.css
@@ -9,6 +9,10 @@
   max-width: var(--layout-max-width-desktop);
 }
 
+/* .home .stories:last-of-type {
+  margin-bottom: 12px;
+} */
+
 .home .cmp-stories-card {
   grid-column: col-start 1 / span 6;
 }
